crates/pg_syntax/tests/snapshots/postgres_regress/numeric_big@394.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO num_exp_add VALUES (9,3,'-60302029489319384367663884408030893999.8854209703537480818248540990234567956069965340942024890856088355839135538265116174644003927269495876835324407641642359213535695803871472434650475144516723617632059130297610134243891145006222068960999879308472500422640481972089756410157246974765071949782242392661524488959954348903412713930092273629207697480131360047867213863018127928853922173643946404281422516357503746700705970360169619852905053433235726497292406142332833');"
---
InsertStmt@0..504
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "num_exp_add"
  Whitespace@23..24 " "
  SelectStmt@24..502
    Values@24..30 "VALUES"
    Whitespace@30..31 " "
    Ascii40@31..32 "("
    List@32..502
      AConst@32..33
        Iconst@32..33 "9"
      Ascii44@33..34 ","
      AConst@34..35
        Iconst@34..35 "3"
      Ascii44@35..36 ","
      AConst@36..502
        Sconst@36..502 "'-6030202948931938436 ..."
  Ascii41@502..503 ")"
  Ascii59@503..504 ";"

